dataset1235/2025-2/2868285114/users/2053306537/executions/3071719669_1128387558.log
== SUBMISSION (2025-08-28 22:19:50)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA,2)
print(f"{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:18:54)
-- CODE: 
valor_nzd = float(input())
valor_brl = round(valor_nzd*TAXA, 2)
print(f"{valor_brl:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:19:20)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA, 2)
print(f"{valor_brl:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:18:52)
-- CODE: 
valor_nzd = float(input())
valor_brl = round(valor_nzd*TAXA, 2)
print(f"{valor_brl:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:19:58)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA,2)
print("{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:21:22)
-- CODE: 
taxa = 2.96
valor_nzd=float(input())
valor_brl=round(valor_nzd * taxa)
print("{valor_brl}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
{valor_brl}
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
{valor_brl}
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
{valor_brl}
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
{valor_brl}
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
{valor_brl}
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
{valor_brl}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:23:19)
-- CODE: 
taxa = 2.96 
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa, 2)
print("valor_brl")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:21:43)
-- CODE: 
taxa = 2.96
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("valor_brl")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:19:41)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA, 2)
print(f"{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA, 2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:18:41)
-- CODE: 
valor_nzd = float(input())
valor_brl = round(valor_nzd * TAXA, 2)
print(f"{valor_brl:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:19:48)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA,2)
print(f"{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:21:03)
-- CODE: 
taxa = 2.96
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("{valor_brl}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
{valor_brl}
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
{valor_brl}
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
{valor_brl}
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
{valor_brl}
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
{valor_brl}
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
{valor_brl}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:21:21)
-- CODE: 
taxa = 2.96
valor_nzd=float(input())
valor_brl=round(valor_nzd * taxa)
print("{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
{valor_brl}
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
{valor_brl}
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
{valor_brl}
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
{valor_brl}
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
{valor_brl}
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
{valor_brl}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:18:56)
-- CODE: 
valor_nzd = float(input())
valor_brl = round(valor_nzd*TAXA, 2)
print(f"{valor_brl:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd*TAXA, 2)
                                ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:19:59)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA,2)
print("{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:42)
-- CODE: 
taxa = 2.96 
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa, 2)
print(f"{valor_brl: .2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
20.72
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
2.96
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
23.68
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
56.24
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
62.16
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
5.92
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:23:20)
-- CODE: 
taxa = 2.96 
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa, 2)
print("valor_brl")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:21:01)
-- CODE: 
taxa = 2.96
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
{valor_brl}
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
{valor_brl}
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
{valor_brl}
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
{valor_brl}
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
{valor_brl}
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
{valor_brl}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:21:44)
-- CODE: 
taxa = 2.96
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("valor_brl")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:21:45)
-- CODE: 
taxa = 2.96
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("valor_brl")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:22:55)
-- CODE: 
taxa = 2.96 # 1 NZD = 2.96 BRL
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("valor_brl")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:19:49)
-- CODE: 
valor_nzd=float(input())
valor_brl=round(valor_nzd*TAXA,2)
print(f"{valor_brl}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl=round(valor_nzd*TAXA,2)
                              ^^^^
NameError: name 'TAXA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:22:53)
-- CODE: 
taxa = 2.96 # 1 NZD = 2.96 BRL
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("valor_brl")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:22:54)
-- CODE: 
taxa = 2.96 # 1 NZD = 2.96 BRL
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa)
print("valor_brl")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:23:18)
-- CODE: 
taxa = 2.96 
valor_nzd = float(input())
valor_brl = round(valor_nzd * taxa, 2)
print("valor_brl")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
valor_brl
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
valor_brl
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
valor_brl
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
valor_brl
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
valor_brl
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
valor_brl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:18:40)
-- CODE: 
valor_nzd = float(input())
valor_brl = round(valor_nzd * TAXA, 2)
print(f"{valor_brl:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_brl = round(valor_nzd * TAXA, 2)
                                  ^^^^
NameError: name 'TAXA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
